--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@optimizely/optimizely-sdk": "file:../packages/optimizely-sdk",
+    "@optimizely/optimizely-sdk": "file:./javascript-sdk/packages/optimizely-sdk",
     "hoist-non-react-statics": "^3.3.0",
     "prop-types": "^15.6.2",
     "utility-types": "^2.1.0 || ^3.0.0"
